fix: switch to Dracula syntax theme, fix scroll cutoff on long content pages

--- a/docs/site/sass/style.scss
+++ b/docs/site/sass/style.scss
@@ -258,7 +258,6 @@ pre {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
-  min-height: calc(100vh - 120px);
 }
 
 .docs-sidebar {
